--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -15,6 +15,7 @@ services:
     restart: always
     command:
       - "--api.dashboard=true"
+      - "--api.insecure=false"  # Ensure API is not accessible without auth
       - "--providers.docker=true"
       - "--providers.docker.exposedbydefault=false"
       - "--providers.docker.network=net"
@@ -26,6 +27,8 @@ services:
       - "--certificatesresolvers.myresolver.acme.tlschallenge=true"
       - "--certificatesresolvers.myresolver.acme.email=${ACME_EMAIL}"
       - "--certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json"
+      - "--log.level=INFO"
+      - "--accesslog=true"
     ports:
       - "80:80"
       - "443:443"
@@ -37,18 +40,38 @@ services:
     env_file:
       - /etc/platform/env
     labels:
+      # Dashboard configuration with enhanced security
       - "traefik.http.routers.dashboard.rule=Host(`${TRAEFIK_DOMAIN}`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
       - "traefik.http.routers.dashboard.entrypoints=websecure"
       - "traefik.http.routers.dashboard.tls=true"
       - "traefik.http.routers.dashboard.tls.certresolver=myresolver"
       - "traefik.http.routers.dashboard.service=api@internal"
       - "traefik.http.routers.dashboard.middlewares=dashboard-auth@docker"
+      
+      # Basic Auth middleware
       - "traefik.http.middlewares.dashboard-auth.basicauth.users=${TRAEFIK_BASIC_AUTH}"
-      #  redirect middleware deployd.xyz -> WEB_DOMAIN
+      
+      # Security headers middleware
+      - "traefik.http.middlewares.dashboard-security.headers.frameDeny=true"
+      - "traefik.http.middlewares.dashboard-security.headers.contentTypeNosniff=true"
+      - "traefik.http.middlewares.dashboard-security.headers.browserXssFilter=true"
+      - "traefik.http.middlewares.dashboard-security.headers.referrerPolicy=strict-origin-when-cross-origin"
+      - "traefik.http.middlewares.dashboard-security.headers.customRequestHeaders.X-Forwarded-Proto=https"
+      
+      # Rate limiting middleware
+      - "traefik.http.middlewares.dashboard-ratelimit.ratelimit.burst=10"
+      - "traefik.http.middlewares.dashboard-ratelimit.ratelimit.average=5"
+      - "traefik.http.middlewares.dashboard-ratelimit.ratelimit.period=1m"
+      
+      # Chain middlewares for dashboard
+      - "traefik.http.middlewares.dashboard-auth.chain.middlewares=dashboard-security@docker,dashboard-ratelimit@docker"
+      
+      # Redirect middleware
       - "traefik.http.middlewares.redirect-to-web.redirectregex.regex=^https://(${DOMAIN})/?(.*)"
       - "traefik.http.middlewares.redirect-to-web.redirectregex.replacement=https://${WEB_DOMAIN}/$${2}"
       - "traefik.http.middlewares.redirect-to-web.redirectregex.permanent=true"
-      # apex router
+      
+      # Apex router
       - "traefik.http.routers.apex.rule=Host(`${DOMAIN}`)"
       - "traefik.http.routers.apex.entrypoints=websecure"
       - "traefik.http.routers.apex.tls=true"
