--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -44,7 +44,7 @@ services:
       - /etc/platform/env
     labels:
       # Dashboard configuration with enhanced security
-      - "traefik.http.routers.dashboard.rule=Host(`${TRAEFIK_DOMAIN}`)"
+      - "traefik.http.routers.dashboard.rule=Host(`${TRAEFIK_DOMAIN}`) && (PathPrefix(`/dashboard`))"
       - "traefik.http.routers.dashboard.entrypoints=websecure"
       - "traefik.http.routers.dashboard.tls=true"
       - "traefik.http.routers.dashboard.tls.certresolver=myresolver"
