--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -11,17 +11,20 @@ networks:
 services:
   traefik:
     profiles: ["infra"]
-    image: traefik:v2.11.2
+    image: traefik:v3
     restart: always
+    security_opt:
+      - no-new-privileges:true
     command:
-      - "--api=true"
+      - "--api.insecure=false"
       - "--api.dashboard=true"
-      - "--api.insecure=false"  # Ensure API is not accessible without auth
       - "--providers.docker=true"
       - "--providers.docker.exposedbydefault=false"
       - "--providers.docker.network=net"
-      - "--entrypoints.web.address=:80"
-      - "--entrypoints.websecure.address=:443"
+      - "--providers.file.directory=/etc/traefik/dynamic"
+      - "--entryPoints.web.address=:80"
+      - "--entryPoints.websecure.address=:443"
+      - "--entryPoints.websecure.http.tls=true"
       - "--entrypoints.web.http.redirections.entryPoint.to=websecure"
       - "--entrypoints.web.http.redirections.entryPoint.scheme=https"
       - "--entrypoints.web.http.redirections.entryPoint.permanent=true"
@@ -34,6 +37,7 @@ services:
     ports:
       - "80:80"
       - "443:443"
+      - "8080:8080"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
       - "/var/lib/platform/letsencrypt:/letsencrypt"
@@ -54,16 +58,10 @@ services:
 
       # Dashboard configuration with enhanced security
       - "traefik.http.routers.dashboard.rule=Host(`traefik.example.com`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
+      - "traefik.http.routers.dashboard.entrypoints=websecure"
       - "traefik.http.routers.dashboard.service=api@internal"
-      - "traefik.http.routers.dashboard.middlewares=auth"
-
-      - "traefik.http.routers.dashboard.service=dashboard@internal"
-      - "traefik.http.routers.api.rule=Host(`${TRAEFIK_DOMAIN}`) && PathPrefix(`/api`)"
-      - "traefik.http.routers.api.service=api@internal"
       - "traefik.http.routers.dashboard.tls=true"
       - "traefik.http.routers.dashboard.tls.certresolver=myresolver"
-      - "traefik.http.routers.api.tls=true"
-      - "traefik.http.routers.api.tls.certresolver=myresolver"
       
       # Security headers middleware for dashboard
       - "traefik.http.middlewares.dashboard-security.headers.frameDeny=true"
