--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "gen:": "encore gen client --output=./src/libs/client.ts --env=development",
+    "gen:": "encore gen client --output=./src/lib/client.ts --env=development",
     "gen:openapi": "encore gen client --lang=openapi --output=./src/libs/openapi.json",
     "dev": "dotenv -e ../.env.local -e .env -- vite",
     "start": "node .output/server/index.mjs",
@@ -18,6 +18,8 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "@logto/react": "^2.2.4",
+    "@logto/browser": "^2.2.4",
     "@electric-sql/client": "^1.0.10",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/electric-db-collection": "^0.1.23",
@@ -28,7 +30,6 @@
     "@tanstack/router-plugin": "^1.132.3",
     "@trpc/client": "^11.5.1",
     "@trpc/server": "^11.5.1",
-    "better-auth": "^1.3.16",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.5",
     "drizzle-zod": "^0.7.1",
