--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,35 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
-    "@logto/react": "^2.2.4",
     "@electric-sql/client": "^1.0.10",
+    "@logto/react": "^2.2.4",
+    "@hookform/resolvers": "^4.0.0",
+    "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
+    "@radix-ui/react-aspect-ratio": "^1.1.2",
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-collapsible": "^1.1.3",
+    "@radix-ui/react-context-menu": "^2.2.6",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-hover-card": "^1.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-menubar": "^1.1.6",
+    "@radix-ui/react-navigation-menu": "^1.2.5",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-progress": "^1.1.2",
+    "@radix-ui/react-radio-group": "^1.2.3",
+    "@radix-ui/react-scroll-area": "^1.2.3",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slider": "^1.2.3",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.1.3",
+    "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-toggle": "^1.1.2",
+    "@radix-ui/react-toggle-group": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/electric-db-collection": "^0.1.23",
     "@tanstack/react-db": "^0.1.21",
@@ -27,15 +54,29 @@
     "@tanstack/react-router-devtools": "^1.132.2",
     "@tanstack/react-start": "^1.132.3",
     "@tanstack/router-plugin": "^1.132.3",
-    "@trpc/client": "^11.5.1",
-    "@trpc/server": "^11.5.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "1.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.5",
     "drizzle-zod": "^0.7.1",
+    "embla-carousel-react": "^8.5.2",
+    "input-otp": "^1.4.2",
+    "lucide-react": "^0.475.0",
+    "next-themes": "^0.4.4",
     "pg": "^8.16.3",
     "react": "^19.1.1",
+    "react-day-picker": "9.11.0",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.54.2",
+    "react-resizable-panels": "^2.1.7",
+    "recharts": "^2.15.1",
+    "sonner": "^1.7.4",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.2",
     "vite": "^7.1.7",
     "vite-tsconfig-paths": "^5.1.4",
     "zod": "^3.25.76"
